modify some api path and add update to member
