# docs/swagger.yaml
@@ -1,5 +1,15 @@
 basePath: /api
 definitions:
+  auth.LoginRequest:
+    properties:
+      password:
+        type: string
+      username:
+        type: string
+    required:
+    - password
+    - username
+    type: object
   cart.CartItem:
     properties:
       build_time:
@@ -53,16 +63,6 @@ definitions:
       remain:
         type: integer
     type: object
-  member.LoginRequest:
-    properties:
-      password:
-        type: string
-      username:
-        type: string
-    required:
-    - password
-    - username
-    type: object
   member.MemberInfo:
     properties:
       address:
@@ -73,12 +73,8 @@ definitions:
         type: integer
       name:
         type: string
-      payment_id:
-        $ref: '#/definitions/sql.NullInt64'
       phone_num:
         $ref: '#/definitions/sql.NullString'
-      shipment_id:
-        $ref: '#/definitions/sql.NullInt64'
       username:
         type: string
     type: object
@@ -97,6 +93,17 @@ definitions:
     - name
     - password
     - username
+    type: object
+  member.UpdateRequest:
+    properties:
+      address:
+        type: string
+      email:
+        type: string
+      name:
+        type: string
+      phone_num:
+        type: string
     type: object
   order.CreationRequest:
     properties:
@@ -247,14 +254,6 @@ definitions:
     - remain
     - tags
     type: object
-  sql.NullInt64:
-    properties:
-      int64:
-        type: integer
-      valid:
-        description: Valid is true if Int64 is not NULL
-        type: boolean
-    type: object
   sql.NullString:
     properties:
       string:
@@ -295,6 +294,47 @@ info:
   title: Swagger ACW-Backend API
   version: "1.0"
 paths:
+  /api/auth/login:
+    post:
+      consumes:
+      - application/json
+      description: Login a user
+      parameters:
+      - description: Login Request
+        in: body
+        name: login
+        required: true
+        schema:
+          $ref: '#/definitions/auth.LoginRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "401":
+          description: Unauthorized
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Login user
+      tags:
+      - auth
   /api/cart/add:
     post:
       consumes:
@@ -624,47 +664,6 @@ paths:
       summary: Get member info
       tags:
       - member
-  /api/member/login:
-    post:
-      consumes:
-      - application/json
-      description: Login member
-      parameters:
-      - description: Login Request
-        in: body
-        name: login
-        required: true
-        schema:
-          $ref: '#/definitions/member.LoginRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            additionalProperties: true
-            type: object
-        "400":
-          description: Bad Request
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "401":
-          description: Unauthorized
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "500":
-          description: Internal Server Error
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: Login member
-      tags:
-      - member
   /api/member/register:
     post:
       consumes:
@@ -704,6 +703,49 @@ paths:
               type: string
             type: object
       summary: Register member
+      tags:
+      - member
+  /api/member/update:
+    put:
+      consumes:
+      - application/json
+      description: Update member info
+      parameters:
+      - description: Update Request
+        in: body
+        name: update
+        required: true
+        schema:
+          $ref: '#/definitions/member.UpdateRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "401":
+          description: Unauthorized
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - ApiKeyAuth: []
+      summary: Update member info
       tags:
       - member
   /api/order/create:
