# pkg/router/member/models.go
@@ -5,15 +5,13 @@ import (
 )
 
 type Member struct {
-	ID         int    `json:"id"`
-	Name       string `json:"name" validate:"required"`
-	Password   string `json:"password" validate:"required"`
-	Username   string `json:"username" validate:"required"`
-	Address    string `json:"address"`
-	Email      string `json:"email" validate:"required"`
-	PhoneNum   string `json:"phone_num"`
-	PaymentID  int    `json:"payment_id"`
-	ShipmentID int    `json:"shipment_id"`
+	ID       int    `json:"id"`
+	Name     string `json:"name" validate:"required"`
+	Password string `json:"password" validate:"required"`
+	Username string `json:"username" validate:"required"`
+	Address  string `json:"address"`
+	Email    string `json:"email" validate:"required"`
+	PhoneNum string `json:"phone_num"`
 }
 
 type RegistrationRequest struct {
@@ -23,18 +21,18 @@ type RegistrationRequest struct {
 	Email    string `json:"email" validate:"required"`
 }
 
-type LoginRequest struct {
-	Username string `json:"username" validate:"required"`
-	Password string `json:"password" validate:"required"`
+type UpdateRequest struct {
+	Name     string `json:"name"`
+	Address  string `json:"address"`
+	Email    string `json:"email"`
+	PhoneNum string `json:"phone_num"`
 }
 
 type MemberInfo struct {
-	ID         int            `json:"id"`
-	Name       string         `json:"name"`
-	Username   string         `json:"username"`
-	Email      string         `json:"email"`
-	Address    sql.NullString `json:"address"`
-	PhoneNum   sql.NullString `json:"phone_num"`
-	PaymentID  sql.NullInt64  `json:"payment_id"`
-	ShipmentID sql.NullInt64  `json:"shipment_id"`
+	ID       int            `json:"id"`
+	Name     string         `json:"name"`
+	Username string         `json:"username"`
+	Email    string         `json:"email"`
+	Address  sql.NullString `json:"address"`
+	PhoneNum sql.NullString `json:"phone_num"`
 }
